Update header and index.html
* Adapted header and index.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,7 +37,7 @@
 				header: {
 			    	left: 'prev',
 					center: 'title',
-			        right: 'month,agendaWeek,agendaDay,listWeek,next'
+			        right: 'month,agendaWeek,agendaDay,next'
 				},
 				// customize the button names,
 				// otherwise they'd all just say "list"
@@ -46,7 +46,7 @@
 			        listWeek: { buttonText: '' + list_week + '' },
 			        listMonth: { buttonText: '' + list_month + '' }
 				},
-				defaultView: 'listMonth',
+				defaultView: 'month',
 			    navLinks: false,		// can click day/week names to navigate views
 			    editable: false,	// events are not drag 'n dropable
 			    eventLimit: true,	// allow "more" link when too many events
