--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -13,11 +13,10 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-show-password/1.0.3/bootstrap-show-password.min.js"></script>
+	<head th:replace="/fragment/header :: header"></head>	
 	<title th:text="@{${@environment.getProperty('matilda.registration')}}"></title>
 </head>
-	
-	<body class=genBackground>
-		<head th:replace="/fragment/header :: header"></head>	
+<body class=genBackground>
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
@@ -117,7 +116,7 @@
                        th:text="${error}">Validation error</p>
                 </div>
                 <div class="form-check">
-                    <button type="submit" id = "login-submit" class="btn btn-success">Register</button>
+                    <button type="submit" id = "login-submit" class="bigButtons">Registrieren</button>
                 </div>
 
             </form>
