--- a/src/main/resources/templates/lagerstandortupdate.html
+++ b/src/main/resources/templates/lagerstandortupdate.html
@@ -12,7 +12,7 @@
 </head>
 <body class="genBackground">
 <div class="container">
-	<h2>Lagerstandort</h2>
+	<h2>Lagerstandort aktualisieren</h2>
     <form action="#" th:action="@{/lagerstandortupdate/{id}(id=${lagerstandort.id})}" th:object="${lagerstandort}" method="post">
     
 		<p class="error-message"
