--- a/src/main/resources/templates/materialverwaltung.html
+++ b/src/main/resources/templates/materialverwaltung.html
@@ -31,12 +31,10 @@
 															 Das Material kann auch gleich zu einer bestehenden Veranstaltung hinzufügen werden. </span>
 	</th>
 	<th class="CellWithComment"><i class="far fa-question-circle"></i>
-		<span class="CellComment" >Das ausgewählte Material 'buchen'. 
-															 Das Material kann auch gleich zu einer bestehenden Veranstaltung hinzufügen werden. </span>
+		<span class="CellComment" >Lieferungen verwalten</span>
 	</th>
 	<th class="CellWithComment"><i class="far fa-question-circle"></i>
-		<span class="CellComment" >Das ausgewählte Material 'buchen'. 
-															 Das Material kann auch gleich zu einer bestehenden Veranstaltung hinzufügen werden. </span>
+		<span class="CellComment" >Inventur</span>
 	</th>
 </tr>
 </thead>
