--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -5,7 +5,7 @@
  	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
  	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}"/>
  	<head th:replace="/fragment/header :: header"></head>	
-    <title>Page not found</title>
+    <title>Insufficient permission</title>
 </head>
 	<body class="genBackground">
 	<div class="container">
