--- a/src/main/resources/templates/passwordaenderung.html
+++ b/src/main/resources/templates/passwordaenderung.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
  	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
  	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}"/>
- 	<title>PasswortAendern</title>
- 	<head th:replace="/fragment/header :: header"></head>	
+ 	<title>Passwort ändern</title>
+ <head th:replace="/fragment/header :: header"></head>	
 </head>
 	<body class="genBackground">
 		<div class="container">
@@ -36,7 +36,7 @@
 									    			th:value="*{users[__${itemStat.index}__].username}" 
 									    			th:onclick="${'inputClick('''+ itemStat.index +''')'}" /></td>
 									    <td><label><span th:text="*{users[__${itemStat.index}__].username}"></span></label></td>
-									    <td><input class="passwordField" type="password" 
+									    <td><input type="password" class="passwordField" style="margin-left: 0px;"
 									    			name="passwordField" 
 									    			th:field="*{users[__${itemStat.index}__].password}" 
 									    			th:id="${itemStat.index}" 
