--- a/src/main/resources/templates/mitarbeiterverwaltung.html
+++ b/src/main/resources/templates/mitarbeiterverwaltung.html
@@ -39,13 +39,13 @@
 								<td><input type="text" id="schmal"
 									th:field="*{users[__${itemStat.index}__].id}" readonly /></td>
 								<td><input type="text" id="schmal"
-									th:field="*{users[__${itemStat.index}__].username}" /></td>
+									th:field="*{users[__${itemStat.index}__].username}" readonly /></td>
 								<td><input type="text" id="schmal"
 									name="anzeigename"
-									th:field="*{users[__${itemStat.index}__].anzeigename}" /></td>
+									th:field="*{users[__${itemStat.index}__].anzeigename}" readonly /></td>
 								<td><input type="text" id="schmal"
 									name="dienstnummer"
-									th:field="*{users[__${itemStat.index}__].dienstnummer}" /></td>
+									th:field="*{users[__${itemStat.index}__].dienstnummer}" readonly /></td>
 							</tr>
 						</tbody>
 					</table>
