--- a/src/main/resources/templates/passwordaenderung.html
+++ b/src/main/resources/templates/passwordaenderung.html
@@ -44,7 +44,7 @@
 									</tr>
 					            </tbody>
 					        </table>
-					     <input type="submit" id="submitButton" th:value="Speichern" class="bigButtons"/>
+					     <input type="submit" id="submitButton" th:value="Speichern" class="bigButtons" disabled="true"/>
 					</form>
 					
 		            <div th:if="${param.success}">
@@ -65,6 +65,7 @@
 		            passwordFields[i].disabled = true;
 		        }
 		        document.getElementById(id).removeAttribute('disabled');
+		        document.getElementById("submitButton").disabled = false;
 		    }
 		</script>
 	</body>
