--- a/src/main/resources/templates/passwordaenderung.html
+++ b/src/main/resources/templates/passwordaenderung.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
  	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
  	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}"/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
  	<title>Passwort ändern</title>
  <head th:replace="/fragment/header :: header"></head>	
 </head>
@@ -17,56 +20,84 @@
 		<div class="container">
 			<h2>Passwort ändern</h2>
 		   <div class="row">
-		   	<div class="col-50">
-					<form action="#" th:action="@{/passwordaenderung}" th:object="${UserCreationDto}" method="post">
+					<form action="#" th:action="@{/passwordaenderung}" th:object="${UserCreationDto}">
 					        <table class="mainTable">
 					            <thead>
 					                <tr>
 					                	<th class="CellWithComment"><i class="far fa-question-circle"></i>
 											<span class="CellComment" >Mitarbeiter auswählen</span>
 										</th>
-					                    <th>Username</th>
-					                    <th>Password</th>
 					                </tr>
 					            </thead>
 					            <tbody>
 									<tr th:each="user, itemStat : *{users}">
-									    <td><input type="radio"
-									    			name="radiobutton" 
-									    			th:value="*{users[__${itemStat.index}__].username}" 
-									    			th:onclick="${'inputClick('''+ itemStat.index +''')'}" /></td>
-									    <td><label><span th:text="*{users[__${itemStat.index}__].username}"></span></label></td>
-									    <td><input type="password" class="passwordField" style="margin-left: 0px;"
-									    			name="passwordField" 
-									    			th:field="*{users[__${itemStat.index}__].password}" 
-									    			th:id="${itemStat.index}" 
-									    			disabled/></td>
+									    <td>
+										    <input	type="text"
+									    		name="benutzername"
+									    		th:field="*{users[__${itemStat.index}__].username}" 
+									    		th:id="${itemStat.index}"
+									    		class="btn btn-info btn-lg" data-toggle="modal" data-target="#passwordChange" readonly/>
+									    </td>
 									</tr>
 					            </tbody>
 					        </table>
-					     <input type="submit" id="submitButton" th:value="Speichern" class="bigButtons" disabled="true"/>
 					</form>
 					
 		            <div th:if="${param.success}">
 		                <div class="alert alert-info">
 		                    The user password was successfully changed.
 		                </div>
-		            </div>
 		          </div>
 		    </div>
-		
 		</div>
-		<script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
-		<script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
-		<script>
-		    function inputClick(id) {
-		        var passwordFields = document.getElementsByClassName("passwordField");
-		        for(i = 0; i < passwordFields.length; i++) {
-		            passwordFields[i].disabled = true;
-		        }
-		        document.getElementById(id).removeAttribute('disabled');
-		        document.getElementById("submitButton").disabled = false;
-		    }
-		</script>
+		
+	  <div class="modal fade" id="passwordChange" role="dialog">
+	    <div class="modal-dialog">
+	      <div class="modal-content">
+	        <div class="modal-header">
+	          <button type="button" class="close" data-dismiss="modal">&times;</button>
+	          <h4 class="modal-title">Passwort ändern</h4>
+	        </div>
+	        <div class="modal-body">
+	        	<form action="#" th:action="@{/passwordaenderung}" th:object="${UserCreationDto}">
+			        <table class="mainTable">
+			            <thead>
+			                <tr>
+			                	<th class="CellWithComment"><i class="far fa-question-circle"></i>
+									<span class="CellComment" >Mitarbeiter auswählen</span>
+								</th>
+			                    <th>Username</th>
+			                    <th>Password</th>
+			                </tr>
+			            </thead>
+			            <tbody>
+							<tr th:each="user, itemStat : *{users}">
+							    <td>
+								    <input	type="text"
+							    		name="benutzername"
+							    		th:field="*{users[__${itemStat.index}__].username}" 
+							    		th:id="${itemStat.index}" readonly/>
+							    </td>
+							    
+							    <td>
+							    	<input 	type="password" class="passwordField" style="margin-left: 0px;"
+							    			name="passwordField" 
+							    			th:field="*{users[__${itemStat.index}__].password}" 
+							    			th:id="${itemStat.index}"/>
+							    </td>
+							</tr>
+			            </tbody>
+			        </table>
+				</form>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+
+	<script>
+		function form_submit() {
+			document.getElementById("paymentitrform").submit();
+		}
+	</script>  
 	</body>
 </html>
